--- a/spatialScala/DESCRIPTION
+++ b/spatialScala/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spatialScala
 Title: Spatial Statistics in Scala
 Version: 0.0.0.9000
-Authors@R: Arthur Lui <luiarthur@ucsc.edu> [aut, cre]
+Authors@R: person("Arthur", "Lui", email = "luiarthur@ucsc.edu", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.3.3)
 License: What license is it under?
