--- a/spatialScala/DESCRIPTION
+++ b/spatialScala/DESCRIPTION
@@ -7,4 +7,5 @@ Depends: R (>= 3.3.3)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
+Imports: rscala
